--- a/.sequelizerc
+++ b/.sequelizerc
@@ -3,6 +3,6 @@ const path = require('path')
 module.exports = {
     'config' : path.resolve('config', 'database.js'),
     
-
+    'models':  path.resolve('models')
 
 }
