--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,8 +1,8 @@
 const path = require('path')
 
 module.exports = {
-    'config' : path.resolve('config', 'database.js'),
+    config : path.resolve('src', 'database', 'config', 'config.js'),
+    'modesls-path': path.resolve('src' ,'database' ,'models'),
+    'migration-path': path.resolve('src', 'database' ,'migrations')
     
-    'models':  path.resolve('models')
-
 }
