--- a/.sequelizerc
+++ b/.sequelizerc
@@ -4,7 +4,7 @@ const path = require('path')
 module.exports = {
     config : path.resolve('src', 'libs' ,'database', 'config', 'config.js'),
     'modesls-path': path.resolve('src' ,'libs', 'database' ,'models'),
-    'migration-path': path.resolve('src','libs', 'database' ,'migrations'),
+    'migrations-path': path.resolve('src','libs', 'database' ,'migrations'),
     'seeders-path': path.resolve('src', 'libs', 'database', 'seeders')
     
 }
